--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">OdeToBallonsTowerDefence</string>
-    <string name="playerOneTextbox">Player 1 Name</string>
-    <string name="playerTwoTextbox">Player 2 Name</string>
+    <string name="playerOneTextbox">Player 1</string>
+    <string name="playerTwoTextbox">Player 2</string>
     <string name="startButton">START</string>
 </resources>
