--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="playerOneTextbox">Player 1</string>
     <string name="playerTwoTextbox">Player 2</string>
     <string name="startButton">START</string>
+    <string name="player1Label">Player 1</string>
+    <string name="player2Label">Player 2</string>
+    <string name="player1Name">Jacob</string>
+    <string name="player2Name">Jacob</string>
+    <string name="player1Score">0</string>
+    <string name="player2Score">0</string>
 </resources>
