Updated some view model code.
Updated some view model code.

--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="bombBtn">select bomb</string>
     <string name="dart">Select Dart (line)</string>
     <string name="dartBtn">select dart</string>
+    <string name="make_move">Make Move</string>
+    <string name="reset_move">Reset Move</string>
 </resources>
