Added a how to play and selection activity page (and a special suprise for the main activity)

--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="dartBtn">select dart</string>
     <string name="make_move">Make Move</string>
     <string name="reset_move">Reset Move</string>
+    <string name="selectModeBtn">Select Mode</string>
+    <string name="howToPlayTitle">How to Play</string>
+    <string name="howToBackBtn">Back to Start</string>
+    <string name="howToPlayActivityBtn">How To Play</string>
 </resources>
