--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -38,8 +38,7 @@
                but the larger the rectangle area the lower the chance to collect object is, starting at 50%.\n
             \tNote Rectangle must be draw from the upper left corner to bottom right Note\n
             \tc. Line : Has a 70% chance of popping balloon if line passes close to center\n
-            \tNote Line has a buffer so you do not be directly on it extends out perpendicular to the line
-                with a radius at the end!  Note\n
+            \tNote Line has a buffer so you do not be directly on it extends out perpendicular to the line Note\n
         5. Game is over when the number of rounds have been reached, or their is no balloons left on screen\n
         6. Start over!
     </string>
