--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="p2_name">P2 Name</string>
     <string name="finalScoreP1">0</string>
     <string name="p1_name">P1 Name</string>
+    <string name="rounds_5">Rounds: 5</string>
 </resources>
