--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -53,4 +53,6 @@
     <string name="RoundPickerSpeakableText">Choose number of rounds</string>
     <string name="player_two_s_name2">Player two\'s name</string>
     <string name="player_one_s_name2">Player one\'s name</string>
+    <string name="username_hint">username</string>
+    <string name="login_button_text">Login</string>
 </resources>
