--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="state_failed">Failed to get game state</string>
     <string name="save_failed">Failed to save data to cloud</string>
     <string name="load_failed">Failed to load data from cloud</string>
+    <string name="failed_state">Failed to load game state</string>
 </resources>
