--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="username_hint">username</string>
     <string name="login_button_text">Login</string>
     <string name="signup_button_text">Sign Up</string>
+    <string name="reset_button_text">Reset</string>
 </resources>
