Added the ability to add a player name

--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="signup_button_text">Sign Up</string>
     <string name="reset_button_text">Reset</string>
     <string name="remember_me">Remember Me</string>
+    <string name="screen_name">Screen Name</string>
 </resources>
