Working on the end game

--- a/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
+++ b/OdeToBallonsTowerDefence/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="remember_me">Remember Me</string>
     <string name="screen_name">Screen Name</string>
     <string name="wait_p1">Waiting for player 2</string>
+<!--    <string name="end_game">End Game</string>-->
 </resources>
